[gd_scene load_steps=32 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://UI/gun_icons.png" type="Texture" id=2]
[ext_resource path="res://prefabs/SpriteShadow.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Open Sans/OpenSans-ExtraBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://prefabs/TransRect.tscn" type="PackedScene" id=5]
[ext_resource path="res://tiles/stars_trans_back.png" type="Texture" id=6]
[ext_resource path="res://UI/cursor.png" type="Texture" id=7]
[ext_resource path="res://scripts/Cursor.gd" type="Script" id=8]
[ext_resource path="res://UI/boss_bar_back.png" type="Texture" id=9]
[ext_resource path="res://UI/boss_bar_front.png" type="Texture" id=10]
[ext_resource path="res://UI/boss_bar_end.png" type="Texture" id=11]
[ext_resource path="res://scripts/BossBar.gd" type="Script" id=12]
[ext_resource path="res://UI/coin_ui.png" type="Texture" id=13]
[ext_resource path="res://UI/gems_ui.png" type="Texture" id=14]
[ext_resource path="res://UI/gem_container.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 5
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 180, 90 ), Vector2( 180, 92 ), Vector2( 180, 90 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "blackOut"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/threshold")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/tile_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:material:shader_param/mov_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/threshold")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/tile_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:material:shader_param/mov_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/threshold")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/tile_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:material:shader_param/mov_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;
uniform float threshold = 0.5;

void fragment(){
	float PI = 3.14159265358979323846;
	
	float st = smoothstep(length(UV - vec2(0.5, 0.5))*threshold, 0.0, 0.3);//vec2(0.1, 0.1); //FRAGCOORD.xy / SCREEN_PIXEL_SIZE;
	
	vec4 col = MODULATE;
	col.a *= st;
	//float left = step(0.1,st.x);
    //float bottom = step(0.1,st.y);

    // The multiplication of left*bottom will be similar to the logical AND.
    //col = vec3( left * bottom );
	
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/threshold = 0.0

[sub_resource type="Animation" id=9]
length = 0.5
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/threshold")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.099, 0.495 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.495 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=11]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotating_stuff/Line1:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 0, -1 ), Vector2( 0, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotating_stuff/Line2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, 0 ), Vector2( 1, 0 ), Vector2( -2, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotating_stuff/Line3:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ), Vector2( 0, 1 ), Vector2( 0, -2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rotating_stuff/Line4:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.01, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ), Vector2( -1, 0 ), Vector2( 2, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("rotating_stuff/Line4:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("rotating_stuff/Line3:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("rotating_stuff/Line2:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("rotating_stuff/Line1:frame")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath(".:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath(".:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotating_stuff/Line1:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotating_stuff/Line2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotating_stuff/Line3:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rotating_stuff/Line4:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("rotating_stuff/Line1:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("rotating_stuff/Line2:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("rotating_stuff/Line3:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("rotating_stuff/Line4:frame")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath(".:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath(".:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=16]
radius = 4.0

[sub_resource type="DynamicFont" id=13]
size = 12
extra_spacing_char = 4
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=14]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="LifeContainer" type="Node2D" parent="."]
position = Vector2( 8, 8 )

[node name="Gems" type="Node2D" parent="."]
position = Vector2( 29, 25 )

[node name="gem_blue" type="Sprite" parent="Gems"]
texture = ExtResource( 14 )
centered = false
hframes = 3

[node name="blue_container" type="Sprite" parent="Gems"]
texture = ExtResource( 15 )
centered = false

[node name="gem_red" type="Sprite" parent="Gems"]
position = Vector2( 7, 0 )
texture = ExtResource( 14 )
centered = false
hframes = 3
frame = 1

[node name="red_container" type="Sprite" parent="Gems"]
position = Vector2( 7, 0 )
texture = ExtResource( 15 )
centered = false

[node name="gem_yellow" type="Sprite" parent="Gems"]
position = Vector2( 14, 0 )
texture = ExtResource( 14 )
centered = false
hframes = 3
frame = 2

[node name="yellow_container" type="Sprite" parent="Gems"]
position = Vector2( 14, 0 )
texture = ExtResource( 15 )
centered = false

[node name="CoinContainer" type="MarginContainer" parent="."]
margin_left = 272.0
margin_top = 8.0
margin_right = 320.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinText" type="RichTextLabel" parent="CoinContainer"]
margin_right = 48.0
margin_bottom = 14.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0, 0.321569, 0.74902 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
bbcode_enabled = true
bbcode_text = "0000"
meta_underlined = false
text = "0000"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinIcon" type="Sprite" parent="CoinContainer"]
position = Vector2( -10, 3 )
texture = ExtResource( 13 )
centered = false

[node name="Shadow" parent="CoinContainer/CoinIcon" instance=ExtResource( 3 )]
texture = ExtResource( 13 )
centered = false
offset = Vector2( 0, 0 )
hframes = 1
starting_position = Vector2( 2, 2 )

[node name="GunIcon" type="Sprite" parent="."]
position = Vector2( 8, 24 )
texture = ExtResource( 2 )
centered = false

[node name="Shadow" parent="GunIcon" instance=ExtResource( 3 )]
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, 0 )
hframes = 1
starting_position = Vector2( 2, 2 )

[node name="PauseUI" type="Node2D" parent="."]
visible = false
position = Vector2( 180, 90 )

[node name="PauseText" type="RichTextLabel" parent="PauseUI"]
margin_left = -180.0
margin_top = -26.0
margin_right = 140.0
margin_bottom = 34.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.129412, 0, 0.321569, 0.74902 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
bbcode_enabled = true
bbcode_text = "[center]PAUSED[/center]"
meta_underlined = false
text = "PAUSED"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="PauseUI"]
autoplay = "pause_anim"
anims/pause_anim = SubResource( 3 )

[node name="TransRect" parent="." instance=ExtResource( 5 )]
visible = false
modulate = Color( 0, 0, 0, 0 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransRect"]
autoplay = "fadeIn"
anims/blackOut = SubResource( 4 )
anims/fadeIn = SubResource( 5 )
anims/fadeOut = SubResource( 6 )

[node name="HurtRect" type="ColorRect" parent="."]
pause_mode = 1
visible = false
modulate = Color( 0.847059, 0.0392157, 0.286275, 0.509804 )
material = SubResource( 8 )
margin_right = 320.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HurtRect"]
anims/show = SubResource( 9 )

[node name="Cursor" type="Sprite" parent="."]
visible = false
position = Vector2( -32, -16 )
texture = ExtResource( 7 )
vframes = 3
hframes = 4
frame = 1
script = ExtResource( 8 )

[node name="rotating_stuff" type="Node2D" parent="Cursor"]

[node name="Line1" type="Sprite" parent="Cursor/rotating_stuff"]
position = Vector2( 0, 2 )
texture = ExtResource( 7 )
vframes = 3
hframes = 4
frame = 5

[node name="Line2" type="Sprite" parent="Cursor/rotating_stuff"]
position = Vector2( -2, 0 )
rotation = 1.5708
texture = ExtResource( 7 )
vframes = 3
hframes = 4
frame = 5

[node name="Line3" type="Sprite" parent="Cursor/rotating_stuff"]
position = Vector2( 0, -2 )
rotation = 3.14159
texture = ExtResource( 7 )
vframes = 3
hframes = 4
frame = 5

[node name="Line4" type="Sprite" parent="Cursor/rotating_stuff"]
position = Vector2( 2, 0 )
rotation = 4.71239
texture = ExtResource( 7 )
vframes = 3
hframes = 4
frame = 5

[node name="RotationAnimator" type="AnimationPlayer" parent="Cursor"]
playback_speed = 2.0
anims/fadeOut = SubResource( 10 )
anims/idle = SubResource( 11 )
anims/shooting = SubResource( 12 )

[node name="InvisibleTimer" type="Timer" parent="Cursor"]
wait_time = 3.0
one_shot = true

[node name="Area2D" type="Area2D" parent="Cursor"]
collision_layer = 131072
collision_mask = 131072

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cursor/Area2D"]
shape = SubResource( 16 )

[node name="BossBar" type="Sprite" parent="."]
position = Vector2( 70, 160 )
texture = ExtResource( 9 )
centered = false
script = ExtResource( 12 )
current_life = 100.0
max_life = 100.0

[node name="yellow" type="TextureProgress" parent="BossBar"]
margin_right = 180.0
margin_bottom = 8.0
step = 0.1
value = 99.5
texture_under = ExtResource( 9 )
texture_progress = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="red" type="TextureProgress" parent="BossBar"]
margin_right = 180.0
margin_bottom = 7.0
value = 100.0
texture_progress = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" parent="BossBar" instance=ExtResource( 3 )]
texture = ExtResource( 9 )
centered = false
offset = Vector2( 0, 0 )
hframes = 1
starting_position = Vector2( 2, 2 )

[node name="BossName" type="RichTextLabel" parent="BossBar"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0
margin_right = -4.0
margin_bottom = -1.0
custom_fonts/normal_font = SubResource( 13 )
custom_colors/font_color_shadow = Color( 0.129412, 0, 0.321569, 0.74902 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
bbcode_enabled = true
bbcode_text = "[center]Hekatok[/center]"
text = "Hekatok"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="BossBar"]
anims/hide = SubResource( 14 )
anims/show = SubResource( 15 )

[node name="YellowTimer" type="Timer" parent="BossBar"]
wait_time = 0.3
one_shot = true
[connection signal="timeout" from="Cursor/InvisibleTimer" to="Cursor" method="_on_InvisibleTimer_timeout"]
